# potential-waffle

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/dd/[id]/: page.tsx
frontend/src/shared/: api.ts  config.ts
